--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \""
+    "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \"",
+    "build": "npm install && npm install --prefix ../client"
   },
   "keywords": [],
   "author": "",
