--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
     "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \"",
-    "build": "npm install && npm install --prefix ../client"
+    "build": "npm install && npm install --prefix ../client",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
