--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon index.js",
     "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \"",
     "build": "npm install && npm install --prefix ../client",
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
