--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \" npm run server \" \" npm start --prefix ../client \"",
     "build": "npm install && npm install --prefix ../client",
     "start": "node index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install"
   },
   "keywords": [],
   "author": "",
